added bootstrap cdn and jumbotron to landing page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>COVID-19 Funds Relief</title>
+    <title>COVID-19 Funds Relief</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 
 <body>
-	<h1>What This Relief Fund is About?</h1>
-	<p>This is a relief fund page that will redirect to the Robin Hood Relief Fund. Which is a Relief
-		fund that is focused on helping New Yorkers by supporting nonprofit organizations on the frontlines.
-		100 percent of donations will provide emergency support through food, housing, job security and more.
-		</p>
-	
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="display-4">COVID-19 Funds Relief</h1>
+            <p class="lead">What is This Relief Fund About?</p>
+            <hr class="my-4">
+            <p>This is a relief fund page that will redirect to the Robin Hood Relief Fund. Which is a Relief
+                fund that is focused on helping New Yorkers by supporting nonprofit organizations on the frontlines.
+                100 percent of donations will provide emergency support through food, housing, job security and more.</p>
+            <p class="lead">
+            <a class="btn btn-primary btn-lg" href="/about.html" role="button">Learn more</a>
+            </p>
+        </div>
+    </div>
 </body>
 </html>
