fixed button link to about page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 fund that is focused on helping New Yorkers by supporting nonprofit organizations on the frontlines.
                 100 percent of donations will provide emergency support through food, housing, job security and more.</p>
             <p class="lead">
-            <a class="btn btn-primary btn-lg" href="/about.html" role="button">Learn more</a>
+            <a class="btn btn-primary btn-lg" href="./about.html" role="button">About RobinHood</a>
             </p>
         </div>
     </div>
