--- a/about.html
+++ b/about.html
@@ -7,12 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
-    <title>Robin Hood!</title>
+    <link rel="stylesheet" href="css/style.css">
+    
+    <title>Robin Hood</title>
   </head>
   <body>
     <div class="container-fluid bg-white">
-        <nav class="navbar navbar-expand-lg navbar-white bg-white">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -57,7 +58,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">CAREERS</h5>
-                            <p class="card-text">A career at Robin Hood or one of our partner organizations requires a passion for taking on poverty in New York City: those who thrive in a demanding, fast-paced environment. Our team is creative, collaborative, and willing to do whatever it takes to get the job done. And we like to have fun while doing it.</p>
+                            <p class="card-text">A career at Robin Hood or one of our partner organizations requires a passion for taking on poverty in New York City: those who thrive in a demanding, fast-paced environment. Our team is creative, collaborative, and willing to do whatever it takes to get the job done. And we like to have fun while doing it. Join us today and help us change the world!</p>
                             <div class="row justify-content-center">
                                 <button class="btn btn-dark">Join Us</button> 
                             </div>
@@ -66,6 +67,10 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="container-fluid bg-dark text-center py-4 text-light mt-3">
+        ROBIN HOOD | 826 Broadway, 9th Floor New York, NY 10003
     </div>
 
     <!-- Optional JavaScript -->
