--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>COVID-19 Funds Relief</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-</head>
-
-<body>
-    <div class="container">
-        <div class="jumbotron">
-            <h1 class="display-4">COVID-19 Funds Relief</h1>
-            <p class="lead">What is This Relief Fund About?</p>
-            <hr class="my-4">
-            <p>This is a relief fund page that will redirect to the Robin Hood Relief Fund. Which is a Relief
-                fund that is focused on helping New Yorkers by supporting nonprofit organizations on the frontlines.
-                100 percent of donations will provide emergency support through food, housing, job security and more.</p>
-            <p class="lead">
-            <a class="btn btn-primary btn-lg" href="/about.html" role="button">Learn more</a>
-            </p>
+    <head>
+        <title>COVID-19 Funds Relief</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div class="container-fluid bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="/index.html"><img src="images/Robin_Hood.png" alt="Logo"></a>
+            
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                        <li class="nav-item active mr-5">
+                            <a class="nav-link" href="/index.html">Home</a><span class="sr-only">(current)</span>
+                        </li>
+                        <li class="nav-item mr-5">
+                            <a class="nav-link" href="/about.html" tabindex="-1" aria-disabled="true">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    </div>
-</body>
+        <div class="container mt-5">
+            <div class="jumbotron">
+                <h1 class="display-4">COVID-19 Funds Relief</h1>
+                <p class="lead">What is This Relief Fund About?</p>
+                <hr class="my-4">
+                <p>This is a relief fund page that will redirect to the Robin Hood Relief Fund. Which is a Relief
+                    fund that is focused on helping New Yorkers by supporting nonprofit organizations on the frontlines.
+                    100 percent of donations will provide emergency support through food, housing, job security and more.</p>
+                <p class="lead">
+                <a class="btn btn-primary btn-lg" href="/about.html" role="button">Learn more</a>
+                </p>
+            </div>
+        </div>
+        <div class="container-fluid bg-dark text-center py-4 text-light">
+            ROBIN HOOD | 826 Broadway, 9th Floor New York, NY 10003
+        </div>
+    </body>
 </html>
