added navbar to landing page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
 </head>
 
 <body>
+    <div class="container-fluid bg-white">
+        <nav class="navbar navbar-expand-lg navbar-white bg-white">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="./index.html"><img src="images/Robin_Hood.png" alt="Logo"></a>
+          
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item mr-5">
+                        <a class="nav-link" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item active mr-5">
+                        <a class="nav-link" href="./about.html" tabindex="-1" aria-disabled="true">About<span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
     <div class="container">
         <div class="jumbotron">
             <h1 class="display-4">COVID-19 Funds Relief</h1>
