--- a/index.html
+++ b/index.html
@@ -1,53 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>COVID-19 Funds Relief</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-</head>
+    <head>
+        <title>COVID-19 Funds Relief</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    </head>
 
-<body>
-    <div class="container-fluid bg-white">
-        <nav class="navbar navbar-expand-lg navbar-white bg-white">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="./index.html"><img src="images/Robin_Hood.png" alt="Logo"></a>
-          
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item mr-5">
-                        <a class="nav-link" href="./index.html">Home</a>
-                    </li>
-                    <li class="nav-item active mr-5">
-                        <a class="nav-link" href="./about.html" tabindex="-1" aria-disabled="true">About<span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <div class="container">
-        <div class="jumbotron">
-            <h1 class="display-4">COVID-19 Funds Relief</h1>
-            <p class="lead">What is This Relief Fund About?</p>
-            <hr class="my-4">
-            <p>This is a relief fund page that will redirect to the Robin Hood Relief Fund. Which is a Relief
-                fund that is focused on helping New Yorkers by supporting nonprofit organizations on the frontlines.
-                100 percent of donations will provide emergency support through food, housing, job security and more.</p>
-            <p class="lead">
-            <a class="btn btn-primary btn-lg" href="./about.html" role="button">About RobinHood</a>
-            </p>
+    <body>
+        <div class="container-fluid bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="./index.html"><img src="images/Robin_Hood.png" alt="Logo"></a>
+            
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                        <li class="nav-item active mr-5">
+                            <a class="nav-link" href="./index.html">Home<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item mr-5">
+                            <a class="nav-link" href="./about.html" tabindex="-1" aria-disabled="true">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
+        <img src="images/Relief_Fund.png" class="img-fluid" alt="Responsive Image">
+
         <div class="container mt-5">
             <div class="jumbotron">
-                <h1 class="display-4">COVID-19 Funds Relief</h1>
-                <p class="lead">What is This Relief Fund About?</p>
+                <h1 class="display-4">What is This Relief Fund About?</h1>
                 <hr class="my-4">
                 <p>This is a relief fund page that will redirect to the Robin Hood Relief Fund. Which is a Relief
                     fund that is focused on helping New Yorkers by supporting nonprofit organizations on the frontlines.
                     100 percent of donations will provide emergency support through food, housing, job security and more.</p>
                 <p class="lead">
                 <a class="btn btn-primary btn-lg" href="/about.html" role="button">Learn more</a>
-                </p>
+                 </p>
             </div>
         </div>
         <div class="container-fluid bg-dark text-center py-4 text-light">
