Slightly updated the text of the jumbotron

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>COVID-19 Funds Relief</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -31,12 +31,12 @@
             <div class="jumbotron">
                 <h1 class="display-4">What is This Relief Fund About?</h1>
                 <hr class="my-4">
-                <p>This is a relief fund page that will redirect to the Robin Hood Relief Fund. Which is a Relief
-                    fund that is focused on helping New Yorkers by supporting nonprofit organizations on the frontlines.
-                    100 percent of donations will provide emergency support through food, housing, job security and more.</p>
+                <p>This is a relief fund page that will redirect to the Robin Hood Relief Fund, which is an organization 
+                    that is focused on helping New Yorkers by supporting nonprofit organizations on the frontlines.
+                    100% of donations will provide emergency support through food, housing, job security and more.</p>
                 <p class="lead">
-                <a class="btn btn-primary btn-lg" href="/about.html" role="button">Learn more</a>
-                 </p>
+                    <a class="btn btn-primary btn-lg" href="/about.html" role="button">Learn more</a>
+                </p>
             </div>
         </div>
         <div class="container-fluid bg-dark text-center py-4 text-light">
