Fixed the links

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     that is focused on helping New Yorkers by supporting nonprofit organizations on the frontlines.
                     100% of donations will provide emergency support through food, housing, job security and more.</p>
                 <p class="lead">
-                    <a class="btn btn-primary btn-lg" href="/about.html" role="button">Learn more</a>
+                    <a class="btn btn-primary btn-lg" href="./about.html" role="button">Learn more</a>
                 </p>
             </div>
         </div>
