--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item mr-5">
-                        <a class="nav-link" href="/index.html">Home</a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item active mr-5">
-                        <a class="nav-link" href="/about.html" tabindex="-1" aria-disabled="true">About<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./about.html" tabindex="-1" aria-disabled="true">About<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
