Updated the footer

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 </p>
             </div>
         </div>
-        <div class="container-fluid bg-dark text-center py-4 text-light">
-            ROBIN HOOD | 826 Broadway, 9th Floor New York, NY 10003
+        <div class="container-fluid bg-dark text-center py-4 mt-5 text-light">
+            ROBIN HOOD | 826 Broadway, 9th Floor New York, NY 10003 | Copyright 2020
         </div>
     </body>
 </html>
