--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                         <li class="nav-item mr-5">
                             <a class="nav-link" href="./about.html" tabindex="-1" aria-disabled="true">About</a>
                         </li>
+                        <li class="nav-item mr-5">
+                            <a class="nav-link" href="https://www.robinhood.org" target="_blank">Donate</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
