--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-			<h1 style= "position: absolute; font-weight: bold;">Learn More About Robinhood</h1>            
+                <h2 class="title">Learn More About Robinhood</h2>    
+                        
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item active mr-5">
