footer and logo update

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="container-fluid bg-dark text-center py-4 text-light mt-3">
-            ROBIN HOOD | 826 Broadway, 9th Floor New York, NY 10003 | Copyright 2020
+            Summer 2020 TTP
         </div>
 
         <!-- Optional JavaScript -->
