--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="container-fluid bg-dark text-center py-4 mt-5 text-light">
-            ROBIN HOOD | 826 Broadway, 9th Floor New York, NY 10003 | Copyright 2020
+            Summer 2020 TTP
         </div>
     </body>
 </html>
