made the logo, closes issue #6

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style.css">
-
-        <title>Assignment #1</title>
+        <title>CovidRelief</title>
     </head>
 
     <body>
@@ -13,7 +13,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <h2 class="title">Learn More About Robinhood</h2>    
+                <h2 class="title"><i class="fa fa-smile-o"></i> CovidRelief</h2>
                         
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
